# Aurora-Compiler-Foundry

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  artificer-compiler.md  artillerist-cannon-v1.4.md  artillerist-cannon-v1.5.md  artillerist-cannon-v1.6.md  audit-v1.7.md  class-compiler.md  compatibility-map-v1.8.md  compatibility-map-v2.0.md  compatibility-map-v2.1.md  compatibility-map-v2.2.md  compatibility-map-v2.4.md  export-foundry-examples.md  feature-activity-backend-v2.3.md  feature-activity-backend-v2.5.md  feature-compiler.md  feature-linker.md  foundry-target-format.md  resource-compiler.md  roadmap.md  runtime-architecture-v2.7.md  runtime-automation-v2.6.md  runtime-global-v2.8.md  species-compiler.md  species-v1.3.md  subclass-compiler.md
src/aurora_compiler/: cli.py
src/aurora_compiler/compiler/: class_compiler.py  feature_compiler.py  feature_linker.py  generic_compiler.py  resource_compiler.py  species_compiler.py  spell_compiler.py  subclass_compiler.py
src/aurora_compiler/foundry/: advancement.py  templates.py  (+1 more)
tests/: test_artillerist_cannon_v14.py  test_artillerist_cannon_v15.py  test_class_compiler.py  test_compatibility_classifier_v21.py  test_compatibility_classifier_v22.py  test_compatibility_classifier_v24.py  test_compatibility_report_v20.py  test_feature_activity_backend_v23.py  test_feature_activity_backend_v25.py  test_feature_compiler.py  test_feature_linker.py  test_names.py  test_parser.py  test_resource_compiler.py  test_runtime_v27.py  test_species_compiler.py  test_spell_compiler.py  test_subclass_compiler.py
(+6 files in other folders)
